@@ -19,3 +19,4 @@ suggestions:
   jonbobbly
   hosaka
   Lars Kumbier
+  Ian R. Learmonth
